--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^3.34.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "clsx": "^2.1.1",
     "motion": "^12.19.2",
     "next": "15.3.4",
