--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,7 +44,11 @@ jobs:
             ${{ runner.os }}-nextjs-bun-${{ hashFiles('app/bun.lockb') }}-
 
       - name: Install dependencies
-        run: bun install --ignore-scripts
+        run: bun install
+        working-directory: ./app
+
+      - name: Generate i18n files
+        run: bun ./node_modules/typesafe-i18n/cli/typesafe-i18n.mjs --no-watch
         working-directory: ./app
 
       - name: Build with Next.js
